# audiograph

./: README  meson.build
examples/: gtk.py
src/: audiograph.h  cli.c  graph.c  meson.build
src/gtk+/: gtkaudiographwidget.c  gtkaudiographwidget.h  meson.build
